// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`competing style priority 1`] = `
";

() => create(Foo, {}, create(Bar, {
  \\"className\\": \\"Bar_14s\\"
}));

Styles.include(\`
	.Bar_14s { 
		color: orange;
	}
\`);"
`;

exports[`competing style priority 2`] = `
";

() => <Foo><Bar className=\\"Bar_14s\\" /></Foo>;

Styles.include(\`
	.Bar_14s { 
		color: orange;
	}
\`);"
`;
